<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_menu_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_menu_edit_preferences"
        android:title="@string/title_matches" />
    <item
        android:id="@+id/navigation_mailbox"
        android:icon="@drawable/ic_nav_menu_mailbox"
        android:title="@string/title_mailbox" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_nav_menu_notification"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_searches"
        android:icon="@drawable/ic_nav_menu_searches"
        android:title="@string/title_searches" />

</menu>