<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:textColor="#16C1D6"
            android:textSize="45sp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:text="ProfileCreatedFor"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinner_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#BAB7B7" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Username"
                android:ems="10"
                android:text="@string/editUsername"
                android:hint="@string/editUsername"
                android:inputType="textPersonName" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/editAge"
                android:hint="@string/editAge"
                android:inputType="textEmailSubject"/>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/editEmail"
                android:hint="@string/editEmail"
                android:inputType="textEmailSubject" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Username"
                android:ems="10"
                android:text="@string/editPhoneNo"
                android:hint="@string/editPhoneNo"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/editPassword"
                android:hint="@string/editPassword"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Register"
            android:hint="@string/btnRegister"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnRLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Register"
            android:hint="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>